--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ corr_phone.addEventListener("click", () => {
         name: user_name,
         phone: user_phone
     }
-    bot.sendData(JSON.stringify(data);
+    bot.sendData(JSON.stringify(data));
     bot.close();
 });
 user_name.addEventListener("focus", () => {
