--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ russia_country_but.addEventListener("click", () => {
     country_select.style.display = "none";
     order_form.style.display = "block";
     country_selected = "yes";
-    /*$(".phone").mask("+7 999 999 9999");*/
+    $(".phone").mask("+7 999 999 9999");
     country.textContent = "🇷🇺 Россия";
     user_phone.focus();
 });
