--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@ user_name.addEventListener("focus", () => {
 });
 user_phone.addEventListener("focus", () => {
     mistake.innerText = " ";
-    if (country_selected != yes) {
+    if (country_selected != "yes") {
         mistake.innerText = "Выберите страну!"
-.       user_phone.blur();
+        user_phone.blur();
     }
 });
 </script>
