--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ input:focus {
 </div>
 <div id="order"
 <div id="country_select">
+</div>
 <center>
 <div id="belarus_country">
 <button id="belarus_country_but"><div id="belarus_country_text">🇧🇾  Беларусь</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;<div id="belarus_country_num">+375</div></button>
