--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@ input:focus {
 <h1>Mudgin Coffee</h1>
 <button id="buy">Начать делать заказ</button>
 </div>
-<div id="order"
-<div id="country_select">
+<div id="order">
 <img src="./Coffee.tgs">
 <button id="order_complete">Далее</button>
 </div>
+<div id="country_select">
 <center>
 <div id="belarus_country">
 <button id="belarus_country_but"><div id="belarus_country_text">🇧🇾  Беларусь</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;<div id="belarus_country_num">+375</div></button>
