--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@ let buy = document.getElementById("buy");
 let country_selected = "no";
 let order_but = document.getElementById("order_but");
 let start = document.getElementById("start");
-let order_form = document.getelementbyid("order_form");
-let order = document.getelementbyid("order");
+let order_form = document.getElementById("order_form");
+let order = document.getElementById("order");
 let order_complete = document.getElementById("order_complete");
 let mistake = document.getElementById("error");
 let corr_phone = document.getElementById("corr_phone");
