--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@ input:focus {
     width: 90%;
     border-radius: 8px;
 }
+#order {
+    display: none;
+}
 #country_select {
     width: 80%;
     height: 80%;
@@ -113,7 +116,7 @@ input:focus {
 <button id="buy">Начать делать заказ</button>
 </div>
 <div id="order">
-<img src="./Coffee.tgs">
+<img src="./Coffee.gif">
 <button id="order_complete">Далее</button>
 </div>
 <div id="country_select">
