--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@ input:focus {
     display: none;
     width: 100%;
 }
+#order {
+    display: none;
+}
 #belarus_country_num, #kz_country_num, #russia_country_num {
     color: var(--tg-theme-hint-color);    
 }
