--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ input:focus {
 <button id="buy">Начать делать заказ</button>
 </div>
 <div id="order">
-<img src="./Coffee.gif">
+<img src="./Coffee.webp">
 <button id="order_complete">Далее</button>
 </div>
 <div id="country_select">
