--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@ input:focus {
 #belarus_country_but:hover, #kz_country_but:hover, #russia_country_but:hover   {
     background: var(--tg-theme-bg-color);
 }
+#coffee_order {
+    width: 100%;
+    height: 15%;
+}
 </style>
 </head>
 <body>
@@ -119,7 +123,10 @@ input:focus {
 <button id="buy">Начать делать заказ</button>
 </div>
 <div id="order">
+<div id="coffee_order">
 <img src="./Coffee.webp">
+<div>Каппучино</div>
+</div>
 <button id="order_complete">Далее</button>
 </div>
 <div id="country_select">
